--- a/app/resources/index.html
+++ b/app/resources/index.html
@@ -9,8 +9,7 @@
 
 <body>
     <h2>Business Application</h2>
-    <pre>Application runs with CI/CD integration and using Cloud Transport Management.
-    </pre>
+    <p>Index page</p>
     <a href="html5/webapp/index.html">HTML5</a><br />
     <a href="fiori/webapp/index-standalone.html">Fiori</a><br />
 </body>
